fixed overflow bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,7 @@ h1::after {
     padding: 20px 20px;
     border-radius: 7px;
     background-color: #ffffff;
+    margin-bottom: 150px
 }
 .shalaye, .title, .author {
     margin-bottom: 20px;
@@ -46,6 +47,8 @@ h1::after {
 .title, .author {
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
+    text-align: left;
 }
 .shalaye {
     text-align: left;
